@@ -7,8 +7,6 @@ now! --[[Joey]]
   support use of DOS style paths, which git-annex uses on Windows). 
   Must use Msysgit.
 * rsync special remotes are known buggy.
-* Bad file locking, it's probably not safe to run more than one git-annex
-  process at the same time on Windows.
 * Ssh connection caching does not work on Windows, so `git annex get`
   has to connect twice to the remote system over ssh per file, which
   is much slower than on systems supporting connection caching.
