@@ -2,6 +2,8 @@ git-annex (5.20140128) UNRELEASED; urgency=medium
 
   * Windows: It's now safe to run multiple git-annex processes concurrently
     on Windows; the lock files have been sorted out.
+  * Fixed direct mode annexed content locking code, which is used to
+    guard against recursive file drops.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 28 Jan 2014 13:57:19 -0400
 
